@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-05-12T16:14:13Z",
-  "count_outdated" : 8,
-  "uniques_outdated" : 2,
+  "timestamp" : "2022-05-14T00:55:48Z",
+  "count_outdated" : 9,
+  "uniques_outdated" : 3,
   "count" : 329,
   "uniques" : 13,
   "views" : [
-    {
-      "timestamp": "2022-04-29T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-05-01T00:00:00Z",
       "count": 56,
