@@ -1,12 +1,7 @@
 {
-  "count": 321,
+  "count": 320,
   "uniques": 1,
   "views": [
-    {
-      "timestamp": "2022-04-29T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-05-01T00:00:00Z",
       "count": 56,
